<?xml version="1.0" encoding="utf-8"?>

<!-- string resources -->
<resources>

    <!-- main strings -->
    <string name="app_name">SlackOff</string>
    <string name="folder">Folders</string>
    <string name="file">Files</string>
    <string name="none">Empty</string>
    <string name="no_activities">No apps found to open this file</string>
    <string name="file_options">File Options:</string>
    <string name="rename_file">Rename</string>
    <string name="delete_file">Delete</string>
    <string name="are_you_sure">Do you really want to delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_file">Add File</string>
    <string name="new_folder">Create New Folder</string>
    <string name="new_file">Create New File</string>
    <string name="name_of_file">Name of File</string>
    <string name="create_new">Create New…</string>
    <string name="notes_file">(Note File)</string>
    <string name="error_creating_file">Error creating file</string>
    <string name="file_exists">File already exists!</string>
    <string name="add_new">Add New</string>
    <string name="next">Next</string>
    <string name="next_instance_of_class">Next Date of the Class:</string>
    <string name="class_name">Class name…</string>
    <string name="set_days">Set the days:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="note_title">Add Title</string>
    <string name="checkable">Show Checkboxes</string>
    <string name="new_line">New Line</string>
    <string name="attach_picture">Attach Picture</string>
    <string name="type_here">Type Here…</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="error_saving">Error Saving File :(</string>

    <!-- Days of the Week -->
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>

    <!-- OverNote Strings -->
    <string name="note_name_hint">Note Name…</string>
    <string name="note_text_hint">Note Text…</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>

</resources>
