<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thursday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <CheckBox
                android:id="@+id/saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:checkMark="@android:drawable/checkbox_on_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/cancel"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:background="@drawable/pressed_button_over_note"/>

        <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/pressed_button_over_note"/>

    </LinearLayout>

</LinearLayout>