<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the create dialog -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_folder"
                android:id="@+id/folderButton"
                android:checked="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fileButton"
                android:checked="false"
                android:text="@string/new_file"/>
    </RadioGroup>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fileName"
            android:layout_gravity="center_horizontal"
            android:hint="@string/name_of_file"/>
</LinearLayout>