<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:orientation="vertical">

    <DatePicker
            android:id="@+id/datePicker"
            android:calendarViewShown="false"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    <EditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/class_name"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
                android:id="@+id/cancel"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:background="@drawable/pressed_button_over_note"/>

        <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:inputType="textCapWords|textAutoComplete|textAutoCorrect"
                android:background="@drawable/pressed_button_over_note"/>

    </LinearLayout>


</LinearLayout>